@@ -78,7 +78,7 @@ li.tweet .infoWrapper {
 	padding-top: .5em;
 	background: url('/img/loader.gif') no-repeat center center;
 	}
-	li.tweet .infoWrapper .map {
+	li.tweet .infoWrapper .mapWrapper {
 		height: 200px;
 		border: 1px solid silver;
 		}
@@ -90,8 +90,17 @@ li.tweet.map p.info .geo,
 li.tweet.gallery p.info .img {
 	opacity: 1;
 	}
+
+li.tweet .infoWrapper,
+li.tweet .infoWrapper .map,
+li.tweet .infoWrapper .gallery {
+	display: none;
+	}
+
 li.tweet.map .infoWrapper,
-li.tweet.gallery .infoWrapper {
+li.tweet.map .infoWrapper .map,
+li.tweet.gallery .infoWrapper,
+li.tweet.gallery .infoWrapper .gallery {
 	display: block;
 	}
 
