@@ -1,4 +1,5 @@
 0.43 (in development):
+	* Fixed switching between images and map tweet info
 	* Fixed bug when trying to reply with Meta+Enter on OS X
 	* Fixed bug with geoinfo in tweets
 	- No more donate button
